[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Start.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[node name="StartingUI" type="Control"]
margin_right = 1000.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 210.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "The Memory Game"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="."]
margin_left = 148.0
margin_top = 312.685
margin_right = 491.0
margin_bottom = 380.685
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.658824, 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayButton" type="Button" parent="."]
margin_left = 515.518
margin_top = 313.902
margin_right = 869.518
margin_bottom = 381.902
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.658824, 1 )
text = "How To Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 12.0
margin_top = 13.0
margin_right = 131.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.658824, 1 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dimmer" type="ColorRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.556863 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 0.5
margin_right = 1002.0
margin_bottom = 600.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitWindow" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -85.5
margin_right = 185.0
margin_bottom = 85.5
custom_fonts/title_font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="ExitWindow"]
margin_right = 370.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.658824, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Are you sure you 
want to exit?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="ExitWindow"]
self_modulate = Color( 0.662745, 0.823529, 0.890196, 1 )
margin_left = 72.2641
margin_top = 92.1724
margin_right = 175.264
margin_bottom = 151.172
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.964706, 0.815686, 0.643137, 1 )
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="ExitWindow"]
self_modulate = Color( 0.662745, 0.823529, 0.890196, 1 )
margin_left = 191.264
margin_top = 92.1724
margin_right = 294.264
margin_bottom = 151.172
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.964706, 0.815686, 0.643137, 1 )
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="popup_hide" from="ExitWindow" to="." method="_on_ExitWindow_popup_hide"]
[connection signal="pressed" from="ExitWindow/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="ExitWindow/NoButton" to="." method="_on_NoButton_pressed"]
